rpc config listen notify optimize;connection_id name optimize;listeners query bugfix; (#4591)
* rpc config listen notify optimize

* connection_id name optimize

* listeners query bugfix;